[package]
name = "really-simple-dispersion-wasm"
version = "0.1.0"
authors = ["Joshua Nunn <joshuanunn@hotmail.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]