[package]
name = "really-simple-dispersion-wasm"
version = "0.1.0"
authors = ["Joshua Nunn <joshuanunn@hotmail.co.uk>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.6", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]